--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.gladurbad</groupId>
-    <artifactId>AntiMoveHack</artifactId>
+    <artifactId>Medusa</artifactId>
     <version>1.0</version>
     <build>
         <plugins>
