--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -19,10 +19,16 @@ response:
 
 
 # Check configuration
+# max-cps: Maximum clicks per seconds the player can click.
+# max-reach: Maximum hit-reach. If you have false flags increase this number to 3.0-6.0.
+# reach-sensitivity: (Scale of 1-5) 1-3 makes the check less prone to false flags. 4-5 may produce false positives, but increase the effectiveness of the check.
+# reach-maxlatency: In milliseconds, the maximum ping a player can have before the reach check is disabled. If you are having false positives with lag increase this.
 checks:
   combat:
     max-cps: 20
     max-reach: 3.5
+    reach-sensitivity: 3
+    reach-maxlatency: 200
     autoclicker:
       a:
         enabled: true
@@ -46,6 +52,11 @@ checks:
         max-violations: 50
         punish-command: 'ban %player% %prefix% Unfair Advantage'
       e:
+        enabled: true
+        max-violations: 50
+        punish-command: 'ban %player% %prefix% Unfair Advantage'
+    reach:
+      a:
         enabled: true
         max-violations: 50
         punish-command: 'ban %player% %prefix% Unfair Advantage'
