Added a KillAuraF that is not accurate yet, but can be improved if the RaycastUtils become more accurate.

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -58,6 +58,10 @@ checks:
         enabled: true
         max-violations: 50
         punish-command: 'ban %player% %prefix% Unfair Advantage'
+      f: #VERY INACCURATE - Make the RayCasting more accurate for it to be usable.
+        enabled: false
+        max-violations: 50
+        punish-command: 'ban %player% %prefix% Unfair Advantage'
     reach:
       a:
         enabled: true
