--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -22,13 +22,19 @@ response:
 
 
 # Check configuration
+# max-cps: Maximum clicks per seconds the player can click.
+# max-reach: Maximum hit-reach. If you have false flags increase this number to 3.0-6.0.
+# reach-sensitivity: (Scale of 1-5) 1-3 makes the check less prone to false flags. 4-5 may produce false positives, but increase the effectiveness of the check.
+# reach-maxlatency: In milliseconds, the maximum ping a player can have before the reach check is disabled. If you are having false positives with lag increase this.
 checks:
   combat:
+    max-cps: 20
+    max-reach: 3.5
+    reach-sensitivity: 3
+    reach-maxlatency: 200
     autoclicker:
       a:
         enabled: true
-        # max-cps: Maximum clicks per seconds the player can click.
-        max-cps: 20
         max-violations: 50
         punish-command: 'ban %player% %prefix% Unfair Advantage'
     killaura:
@@ -50,31 +56,15 @@ checks:
         punish-command: 'ban %player% %prefix% Unfair Advantage'
       e:
         enabled: true
-        # swings: Minimum amount of swings to check the detection.
-        swings: 100
-        # min-flag: Minimum amount of hits to flag.
-        min-flag: 75
         max-violations: 50
         punish-command: 'ban %player% %prefix% Unfair Advantage'
-      f: #VERY INACCURATE - Make the RayCasting more accurate for it to be usable.
-        enabled: false
-        # swings: Minimum amount of swings to check the detection.
-        swings: 100
-        # min-flag: Minimum amount of potential hits that haven't been landed to flag.
-        min-flag: 45
+      f:
+        enabled: true
         max-violations: 50
         punish-command: 'ban %player% %prefix% Unfair Advantage'
     reach:
       a:
         enabled: true
-        # max-reach: Maximum hit-reach. If you have false flags increase this number to 3.0-6.0.
-        # 4-5 may produce false positives, but increase the effectiveness of the check.
-        max-reach: 3.5
-        # reach-sensitivity: (Scale of 1-5) 1-3 makes the check less prone to false flags.
-        reach-sensitivity: 3
-        # reach-maxlatency: In milliseconds, the maximum ping a player can have before the reach check is disabled.
-        # If you are having false positives with lag increase this.
-        reach-maxlatency: 200
         max-violations: 50
         punish-command: 'ban %player% %prefix% Unfair Advantage'
   movement:
@@ -132,13 +122,13 @@ checks:
         setback: true
         max-violations: 50
         punish-command: 'ban %player% %prefix% Unfair Advantage'
-    nofall:
-      a:
+      e:
         enabled: true
         setback: true
         max-violations: 50
         punish-command: 'ban %player% %prefix% Unfair Advantage'
-      b:
+    nofall:
+      a:
         enabled: true
         setback: true
         max-violations: 50
@@ -158,7 +148,14 @@ checks:
     badpackets:
       a:
         enabled: true
-        setback: true
+        max-violations: 50
+        punish-command: 'ban %player% %prefix% Unfair Advantage'
+      b:
+        enabled: true
+        max-violations: 50
+        punish-command: 'ban %player% %prefix% Unfair Advantage'
+      c:
+        enabled: true
         max-violations: 50
         punish-command: 'ban %player% %prefix% Unfair Advantage'
     timer:
