--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -3,6 +3,7 @@ version: 1.0
 main: com.gladurbad.medusa.Medusa
 load: STARTUP
 authors: [ GladUrBad ]
+softdepend: [PlaceholderAPI]
 
 commands:
   medusa:
